<resources>
    <string name="app_name">FirebaseExample</string>
    <string name="signup">Sign Up</string>
    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Choose Password</string>
    <string name="rePassword">Repeat Password</string>
    <string name="editext">Type Message to Send</string>
    <string name="loginpwd">Password</string>
    <string name="cancel">Cancel</string>
</resources>
